--- a/_posts/2017-09-06-example.md
+++ b/_posts/2017-09-06-example.md
@@ -1,13 +1,13 @@
 ---
-title: Biofísica
+title: Ejemplo
 date: 2017-09-06 17:07:00 Z
 categories:
 - Posgrados
 layout: post
-author: posgradosFisicaUdea
+author: Diego
 ---
 
-Esta es una publicación de ejemplo para ilustrar las características del sitio [Postgrados Física](https://fisica.udea.edu.co).  
+Esta es una publicación de ejemplo para ilustrar las características del sitio 
 
 <!-- more -->
 
